--- a/myproject/app/src/main/resources/templates/board/detail.html
+++ b/myproject/app/src/main/resources/templates/board/detail.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>게시글 조회</title>
+    <link rel="stylesheet" href="/css/common.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .board-form-container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 700px;
-        }
-
-        .board-form-container h2 {
+        h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
@@ -81,45 +63,57 @@
             background-color: gray;
         }
     </style>
+    
 </head>
 <body>
-<div class="board-form-container">
+
+<header data-th-replace="~{header :: page-header}"></header>
+    
+<div id="content">
     <h1>게시글</h1>
     <form data-th-action="@{/board/update}" method="post"  enctype="multipart/form-data">
         <div class="form-group">
             <label for="no">번호:</label>
-            <input type="text" id="no" name="no" value="1" data-th-value="${board.no}" readonly>
+            <input type="text" id="no" name="no" value="1"
+                   data-th-value="${board.no}" readonly>
         </div>
         <div class="form-group">
             <label for="title">제목:</label>
-            <input type="text" id="title" name="title" value="제목입니다" data-th-value="${board.title}" required>
+            <input type="text" id="title" name="title" value="제목입니다."
+                   data-th-value="${board.title}" required>
         </div>
         <div class="form-group">
             <label for="content">내용:</label>
-            <textarea id="content" name="content" data-th-text="${board.content}" required>내용입니다</textarea>
+            <textarea id="content" name="content"
+                      data-th-text="${board.content}"
+                      required>내용입니다.</textarea>
         </div>
         <div class="form-group">
             <label for="files">첨부파일:</label>
             <input type="file" id="files" name="files" multiple>
             <ul id="attached-files">
                 <li data-th-each="attachedFile : ${board.attachedFiles}">
-                    <a href="/board/file/delete" data-th-href="@{/board/file/download(fileNo=${attachedFile.no})}"
-                    data-th-text="${attachedFile.originFilename}">test.pdf</a>
+                    <a href="/board/file/delete"
+                       data-th-href="@{/board/file/download(fileNo=${attachedFile.no})}"
+                       data-th-text="${attachedFile.originFilename}">test.pdf</a>
                     <button type="button" data-th-onclick="|deleteFile(${attachedFile.no})|">삭제</button>
                 </li>
             </ul>
         </div>
         <div class="form-group">
             <label for="writer">작성자:</label>
-            <input type="text" id="writer" value="홍길동" data-th-value="${board.writer.name}" readonly>
+            <input type="text" id="writer" value="홍길동"
+                   data-th-value="${board.writer.name}" readonly>
         </div>
         <div class="form-group">
             <label for="createDate">작성일:</label>
-            <input type="text" id="createDate" value="2025-03-25" data-th-value="${board.createDate}" readonly>
+            <input type="text" id="createDate" value="2025-03-25"
+                   data-th-value="${board.createDate}" readonly>
         </div>
         <div class="form-group">
             <label for="viewCount">조회수:</label>
-            <input type="text" id="viewCount" value="2" data-th-value="${board.viewCount}" readonly>
+            <input type="text" id="viewCount" value="22"
+                   data-th-value="${board.viewCount}" readonly>
         </div>
         <div class="form-group">
             <input type="submit" value="변경">
@@ -129,14 +123,16 @@
     <a href="list.html" data-th-href="@{/board/list}">목록</a>
 </div>
 
-<script>
-    function deleteBoard(no) {
-        location.href = "/board/delete?no=" + no;
-    }
+<footer data-th-replace="~{footer :: #page-footer}"></footer>
 
-    function deleteFile(no) {
-        location.href = "/board/file/delete?no=" + no;
-    }
+<script>
+function deleteBoard(no) {
+    location.href = "/board/delete?no=" + no;
+}
+
+function deleteFile(no) {
+    location.href = "/board/file/delete?no=" + no;
+}
 </script>
 </body>
 </html>
