--- a/myproject/app/src/main/resources/templates/board/form.html
+++ b/myproject/app/src/main/resources/templates/board/form.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>새 게시글</title>
+    <link rel="stylesheet" href="/css/common.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .board-form-container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 500px;
-        }
-
-        .board-form-container h2 {
+        h2 {
             text-align: center;
             margin-bottom: 20px;
             color: #333;
@@ -70,7 +52,10 @@
     </style>
 </head>
 <body>
-<div class="board-form-container">
+
+<header data-th-replace="~{header :: page-header}"></header>
+
+<div id="content" class="board-form-container">
     <h1>새 게시글</h1>
     <form data-th-action="@{/board/add}" method="post" enctype="multipart/form-data">
         <div class="form-group">
@@ -90,5 +75,8 @@
         </div>
     </form>
 </div>
+
+<footer data-th-replace="~{footer :: #page-footer}"></footer>
+
 </body>
 </html>
