--- a/myproject/app/src/main/resources/templates/error.html
+++ b/myproject/app/src/main/resources/templates/error.html
@@ -7,7 +7,7 @@
 <body>
 <div>
     <h2>실행 오류!</h2>
-    <pre data-th-text="${exception}">오류 내용!</pre>
+    <pre data-th-text="${exception}">오류 내용</pre>
 </div>
 </body>
 </html>
