--- a/myproject/app/src/main/resources/templates/home.html
+++ b/myproject/app/src/main/resources/templates/home.html
@@ -8,16 +8,17 @@
 <body>
 <div>
 
-<header data-th-replace="~{header :: page-header}"></header>
+    <header data-th-replace="~{header :: page-header}"></header>
 
-<div id="content">
+    <div id="content">
 
-    <h1>강의 관리 시스템</h1>
-    <p>환영합니다!</p>
-    
+        <h1>강의 관리 시스템</h1>
+        <p>환영합니다!</p>
+
+    </div>
+
+    <footer data-th-replace="~{footer :: #page-footer}"></footer>
+
 </div>
-
-<footer data-th-replace="~{footer :: #page-footer}"></footer>
-
 </body>
 </html>
