--- a/myproject/app/src/main/resources/templates/auth/login-form.html
+++ b/myproject/app/src/main/resources/templates/auth/login-form.html
@@ -11,6 +11,7 @@
 
 <div id="content">
     <h2>로그인</h2>
+    <p data-th-if="${param.error}" class="error">로그인 실패</p>
     <form data-th-action="@{/auth/login}" method="post">
         <div>
             <label for="email">이메일:</label>
