--- a/myproject/app/src/main/resources/static/css/common.css
+++ b/myproject/app/src/main/resources/static/css/common.css
@@ -85,7 +85,7 @@ body {
     xborder: 1px blue solid;
 }
 
-#content {
+#page-content {
     min-height: 500px;
     padding: 10px;
     xborder: 1px blue solid;
